<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>WidgetInt</class>
 <widget class="QWidget" name="WidgetInt">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>274</width>
    <height>434</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Nom du paramètre :</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="alias"/>
   </item>
   <item>
    <widget class="QLabel" name="label_2">
     <property name="text">
      <string>Libellé (avant) :</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="libBefore"/>
   </item>
   <item>
    <widget class="QLabel" name="label_5">
     <property name="text">
      <string>Libellé (checkbox) :</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="libCheckbox"/>
   </item>
   <item>
    <widget class="QLabel" name="label_4">
     <property name="text">
      <string>Libellé (après) :</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="libAfter"/>
   </item>
   <item>
    <widget class="QCheckBox" name="defaultValue">
     <property name="text">
      <string>Valeur par défaut</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLabel" name="label_3">
     <property name="text">
      <string>Description du paramètre :</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QPlainTextEdit" name="description">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
